fixed technologies overflow

--- a/components/sections/aboutMe.module.css
+++ b/components/sections/aboutMe.module.css
@@ -109,7 +109,6 @@
   .technologies {
     flex-wrap: wrap;
     margin: 10px 0 10px 0;
-    height: 40%;
   }
   .image {
     max-width: 230px;
